--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,8 @@
-textarea.entry {
+.editor textarea {
   resize: none;
-  width: 400px;
-  height: 150px; }
+  width: 300px;
+  height: 150px;
+  display: block; }
+
+.editor button {
+  display: block; }
