--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -1,5 +1,15 @@
-textarea.entry {
-  resize: none;
-  width: 400px;
-  height: 150px;
+.editor {
+
+  textarea {
+    resize: none;
+    width: 300px;
+    height: 150px;
+    display: block;
+  }
+
+  button {
+    display: block;
+  }
+
 }
+
